--- a/styles/index.css
+++ b/styles/index.css
@@ -50,3 +50,15 @@ h1{
     text-align: center;
     width: 400px;
 }
+
+.level {
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    
+  }
+  .very-low {width: 20% ; background-color:#f44336;color: white;}
+  .low {width: 40%; background-color: #f44336;color: white;}
+  .medium {width: 60% ; background-color: rgb(255, 238, 0);color:black;}
+  .high {width: 80% ; background-color: #4CAF50;color: white;}
+  .very-high {width: 100% ; background-color: #4CAF50;color: white;}
