--- a/styles/index.css
+++ b/styles/index.css
@@ -34,6 +34,10 @@ button:hover{
 h1{
     text-align: center;
 }
+.error-mesage{
+    font-size: 20px;
+    color:red;
+}
 
 .password{
     padding-top: 25px;
